<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="application_description">A minimalistic LiveJournal client with support of Markdown markup.</string>

    <string name="app_name">Simple Journal</string>

    <!-- View Labels -->
    <string name="settings">Settings</string>
    <string name="edit_entry">Edit latest entry</string>

    <string name="subject_label">Subject</string>
    <string name="tags_label">Tags</string>
    <string name="music_label">Music</string>
    <string name="detect">Detect</string>

    <!-- dialog -->
    <string name="yay">YAY!</string>
    <string name="entry_posted">Entry successfully posted</string>
    <string name="thanks">Thanks</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="sending">Sending…</string>

    <string name="user_data_not_set">You should set your username and password, if you want to update your journal</string>
    <string name="entry_load_failed">Failed to load entry</string>

    <string name="ok_doit">Yes, please</string>
    <string name="not_now">Not now</string>

    <string name="pitty">That\'s a pitty</string>
    <string name="error">Error</string>

    <string name="something_wrong">Something\'s wrong</string>
    <string name="failed_to_load">Failed to load entry</string>
    <string name="loading">Loading…</string>

    <string name="text_entered">You\'ve already entered some text. Are you sure you want to edit another entry? Current data will be lost.</string>
    <string name="clear_entry">Clear all text and start over?</string>

    <!-- Preferences -->
    <string name="preference_category_userinfo">User information</string>
    <string name="preference_label_username">Username</string>
    <string name="preference_label_password">Password</string>

    <string name="preference_category_entry">Entry settings</string>

    <string name="preference_preformatted_label">Entry is preformatted</string>
    <string name="preference_preformatted_summaryon">Line endings wno not be converted to &lt;br&gt;</string>
    <string name="preference_preformatted_summaryoff">Line endings will be converted to &lt;br&gt;</string>
    <string name="preference_markdown_label">Use Markdown</string>
    <string name="preference_markdown_summaryon">Entry will be parsed using Markdown syntax</string>
    <string name="preference_markdown_summaryoff">Entry will be sent as is</string>

    <string name="preference_security">Access</string>
    <string name="preference_security_summary">Who can read the entries</string>

    <!-- Menu -->
    <string name="menu_send">Send</string>
    <string name="menu_edit">Edit entry</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Markdown syntax</string>
    <string name="menu_clear">Clear</string>

    <!-- Help -->
    <string name="help_title">Markdown</string>
    <string name="markdown_help"><![CDATA[
        Markdown accepts text on consecutive lines as a hard-wrapped paragraph.\n
        \n
        Put a blank Line in between to start a new paragraph.\n
        \n
        # A first level header\n
        ## A second level header\n
        ### You got the point\n
        \n
        You can easily make *italic*, **bold** and --strikeout-- text.\n
        \n
        > This is a &lt;blockqoute&gt;\n
        \n
        * This is an item on unordered list\n
        * And another item\n
        \n
        1. Item on ordered list\n
        2. And yes - another item\n
    ]]></string>
    <string name="login_label">Login</string>

</resources>
