<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_send"
          android:title="@string/menu_send"
          android:icon="@android:drawable/ic_menu_save"/>
    <item android:id="@+id/menu_edit"
          android:title="@string/menu_edit"
          android:icon="@android:drawable/ic_menu_edit"/>
    <item android:id="@+id/menu_clear"
          android:title="@string/menu_clear"
          android:icon="@android:drawable/ic_menu_delete"/>
    <item android:id="@+id/menu_settings"
          android:title="@string/menu_settings"
          android:icon="@android:drawable/ic_menu_preferences"/>
    <item android:id="@+id/menu_help"
          android:title="@string/menu_help"
          android:icon="@android:drawable/ic_menu_help"/>
</menu>
