<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

    <TextView android:id="@+id/username_label"
                  android:layout_width="300dip"
                  android:layout_height="wrap_content"
                  android:text="@string/preference_label_username"/>

        <EditText android:id="@+id/username_edit"
                  android:singleLine="true"
                  android:layout_width="300dip"
                  android:layout_height="wrap_content"
                  android:scrollHorizontally="true"
                  android:capitalize="none"
                  android:autoText="false"
                  android:inputType="text"/>

        <TextView android:id="@+id/password_label"
                  android:layout_width="300dip"
                  android:layout_height="wrap_content"
                  android:text="@string/preference_label_password"/>

        <EditText android:id="@+id/password_edit"
                  android:singleLine="true"
                  android:layout_width="300dip"
                  android:layout_height="wrap_content"
                  android:scrollHorizontally="true"
                  android:capitalize="none"
                  android:autoText="false"
                  android:inputType="textPassword"/>

        <Button android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_label"
                android:onClick="doLogin"/>
    </LinearLayout>
</ScrollView>
